[gd_scene load_steps=5 format=3 uid="uid://dta0kmj3jy7n3"]

[ext_resource type="Script" path="res://interfaces/user_interfaces/settings.gd" id="1_e51ix"]
[ext_resource type="PackedScene" uid="uid://bq71hsn8l66m1" path="res://interfaces/value_setters/vector2_value_setter.tscn" id="2_2hfdw"]
[ext_resource type="PackedScene" uid="uid://blaewudqlkvjc" path="res://interfaces/value_setters/enum_value_setter.tscn" id="3_8yeig"]
[ext_resource type="PackedScene" uid="uid://b8ble03df5ehg" path="res://interfaces/value_setters/bool_value_setter.tscn" id="4_f10fo"]

[node name="Settings" type="VBoxContainer"]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_e51ix")

[node name="tabs" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="window_tab" type="Button" parent="tabs"]
layout_mode = 2
size_flags_horizontal = 3
text = "TEXT_WINDOW"

[node name="mods_tab" type="Button" parent="tabs"]
layout_mode = 2
size_flags_horizontal = 3
text = "TEXT_MODS"

[node name="window_settings" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 7.0

[node name="VBoxContainer" type="VBoxContainer" parent="window_settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="window_size" parent="window_settings/VBoxContainer" instance=ExtResource("2_2hfdw")]
layout_mode = 2
default_x_value = "0"
default_y_value = "0"
label_text = "TEXT_WINDOW_SIZE"

[node name="window_mode" parent="window_settings/VBoxContainer" instance=ExtResource("3_8yeig")]
layout_mode = 2
label_text = "TEXT_WINDOW_MODE"

[node name="mods_settings" type="ScrollContainer" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 7.0

[node name="VBoxContainer" type="VBoxContainer" parent="mods_settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="deep_mods_enabled" parent="mods_settings/VBoxContainer" instance=ExtResource("4_f10fo")]
layout_mode = 2
label_text = "TEXT_DEEP_MODS_ENABLED"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="confirm" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "TEXT_CONFIRM"

[node name="cancel" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "TEXT_CANCEL"

[node name="apply" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "TEXT_APPLY"

[connection signal="pressed" from="tabs/window_tab" to="." method="_on_window_tab_pressed"]
[connection signal="pressed" from="tabs/mods_tab" to="." method="_on_mods_tab_pressed"]
[connection signal="pressed" from="HBoxContainer/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="HBoxContainer/apply" to="." method="_on_apply_pressed"]
